Fixes to make the site usable

--- a/liste1/pc1.html
+++ b/liste1/pc1.html
@@ -26,7 +26,7 @@
     <body>
   <center>
     <hr>
-    <img src="img/title.png"
+    <img src="../img/title.png"
          alt="Les PC les plus insolites"
          height="50px"
          width="500px">
@@ -37,14 +37,14 @@
 
     <p1>Le premier pc :</p1>
     <br><br>
-    <img src="liste1/pc1.jpg"
+    <img src="pc1.jpg"
          height="300px"
          width="400px">
         <br><br> 
     <p2> Cette modification apporté à un boitié de pc par un fan de "Fallout 3" voulant montrer ses talents d'artistes.<br>Et c'est trés reussi !</p>
 <br>
 
-    <a href="index.html">·Page d'accueil·</a>
+    <a href="../index.html">·Page d'accueil·</a>
 
   </center>
  </body>
