--- a/liste1/pc2.html
+++ b/liste1/pc2.html
@@ -26,7 +26,7 @@
     <body>
   <center>
     <hr>
-    <img src="img/title.png"
+    <img src="../img/title.png"
          alt="Les PC les plus insolites"
          height="50px"
          width="500px">
@@ -37,14 +37,14 @@
 
     <p1>Le deuxième pc :</p1>
     <br><br>
-    <img src="liste1/pc2.jpg"
+    <img src="pc2.jpg"
          height="300px"
          width="400px">
         <br><br> 
     <p2> Probablement inspiré par le boitier de Thermaltake, cette modification semble être issu de la rencontre entre une œuvre d’art contemporaine et une machine à café, pour au final, lui donner un look plus qu'unique !</p>
 <br>
 
-    <a href="index.html">·Page d'accueil·</a>
+    <a href="../index.html">·Page d'accueil·</a>
 
   </center>
  </body>
