--- a/liste2/pc3.html
+++ b/liste2/pc3.html
@@ -26,7 +26,7 @@
     <body>
   <center>
     <hr>
-    <img src="img/title.png"
+    <img src="../img/title.png"
          alt="Les PC les plus insolites"
          height="50px"
          width="500px">
@@ -37,14 +37,14 @@
 
     <p1>Le premier pc :</p1>
     <br><br>
-    <img src="liste2/pc1.jpg"
+    <img src="pc3.jpg"
          height="300px"
          width="400px">
         <br><br> 
     <p2> Pour ce premier pc, on a le droit a un génie qui a eu l'idée de dissimuler un pc dans une roue de scooter.<br>C'est à se demander si cet ordinateur va bien tourner...</p>
 <br>
 
-    <a href="index.html">·Page d'accueil·</a>
+    <a href="../index.html">·Page d'accueil·</a>
 
   </center>
  </body>
