--- a/liste2/pc4.html
+++ b/liste2/pc4.html
@@ -26,7 +26,7 @@
     <body>
   <center>
     <hr>
-    <img src="img/title.png"
+    <img src="../img/title.png"
          alt="Les PC les plus insolites"
          height="50px"
          width="500px">
@@ -37,14 +37,14 @@
 
     <p1>Le deuxième pc :</p1>
     <br><br>
-    <img src="liste2/pc2.jpg"
+    <img src="pc4.jpg"
          height="300px"
          width="400px">
         <br><br> 
     <p2> Le recyclage est une des principale préocupation de l'Homme du XXI ème siécle... <br>Mais la on a atteint la limite du concept.</p>
 <br>
 
-    <a href="index.html">·Page d'accueil·</a>
+    <a href="../index.html">·Page d'accueil·</a>
 
   </center>
  </body>
